feat: delete id in url, get by cookies
