# packages/server/src/users/api/UsersController.ts
@@ -1,17 +1,16 @@
-import { Body, Param } from '@nestjs/common';
-import { OmitType } from '@nestjs/swagger';
+import { Body } from '@nestjs/common';
 import { plainToInstance } from 'class-transformer';
 
-import { ApiController, ApiGet, ApiObjectIdParam, ApiUpdate } from '../../shared';
+import { ApiController, ApiGet, ApiUpdate } from '../../shared';
 import { ApiAuthorization, Role, UserId } from '../../shared/auth';
 import { UpdateUserDto, UserDto } from './UserDto';
 
-@ApiController({ path: 'users/profile', name: 'Users', description: 'Operations about users' })
+@ApiController({ path: 'users/profile', name: "Users's profile", description: "Operations on user's profile" })
 class UsersController {
-  @ApiObjectIdParam()
-  @ApiGet({ name: 'user', response: UserDto })
+  @ApiGet({ path: '', name: 'user', response: UserDto })
   @ApiAuthorization(Role.User)
-  async findById() {
+  // eslint-disable-next-line @typescript-eslint/no-unused-vars
+  async findById(@UserId() userId: string) {
     const user = {
       id: '6200218668fc82e7bdf15088',
       name: 'string',
@@ -35,18 +34,16 @@ class UsersController {
       ],
       orders: ['string'],
       profileCompleted: false,
-    };
+    }; // TODO: Hook up GetUserProfileHandler (issue #43), remove eslint-disable comment above
     if (!user) return null;
     return plainToInstance(UserDto, user);
   }
-  @ApiObjectIdParam()
-  @ApiUpdate({ name: 'user' })
+
+  @ApiUpdate({ path: '', name: 'user' })
   @ApiAuthorization(Role.User)
   // eslint-disable-next-line @typescript-eslint/no-unused-vars
-  async update(@UserId() userId: string, @Param('id') id: string, @Body() updateUserDto: UpdateUserDto) {
-    {
-      return null;
-    }
+  async update(@UserId() userId: string, @Body() updateUserDto: UpdateUserDto) {
+    return null; // TODO: Hook up UpdateUserProfileHandler (issue #44), remove eslint-disable comment above
   }
 }
 
